# edbo_data

./: .gitignore  Pipfile  README.md  edbo_data-runner.py  pyproject.toml  requirements.txt
docs/: about.rst  authentication.rst  conf.py  debugging.rst  index.rst  installation.rst  package.rst  testing.rst  usage.rst
docs/_templates/: class.rst
edbo_data/: __main__.py  edbo_data.py
edbo_data/fetching/: fetch_all.py  fetch_netatmo.py  fetch_smhi.py  fetch_tibber.py
tests/: test_edbo_data.py
